# continual-learning-engine

./: .dockerignore  .env.example  .gitignore  README.md  REPORT.md  docker-compose.yml  pyproject.toml
configs/: config.yaml
infrastructure/docker/: Dockerfile.api
infrastructure/grafana/dashboards/: continual_ml.json
infrastructure/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/prometheus/: prometheus.yml
scripts/: analyze_errors.py  benchmark.py  prepare_nyc_taxi.py  prepare_zones.py  retrain.py  serve_demo.py  train.py  validate_drift.py
src/continual_ml/: __init__.py  config.py  geo.py  persistence.py  schemas.py
src/continual_ml/api/: __init__.py  prediction_service.py
src/continual_ml/api/static/: app.js  index.html  styles.css
src/continual_ml/core/: __init__.py  engine.py  evaluation.py
src/continual_ml/data_sources/: __init__.py  base_data_source.py  factory.py  nyc_taxi_data_source.py  synthetic_data_source.py
src/continual_ml/features/: __init__.py  feature_pipeline.py
src/continual_ml/models/: __init__.py  model_registry.py  online_model.py
src/continual_ml/monitoring/: __init__.py  drift_detector.py  metrics_collector.py
src/continual_ml/streaming/: __init__.py  stream_simulator.py
tests/: conftest.py  test_api.py  test_data_sources.py  test_drift.py  test_engine.py  test_features.py
